--- a/modelos/Aprendizaje supervisado/clasificacion.ipynb
+++ b/modelos/Aprendizaje supervisado/clasificacion.ipynb
@@ -1339,6 +1339,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Como vemos que no tiene en cuenta si quedan eliminados ajustamos al modelo para especificar que sean solo aquellos que llegan a la semifinal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Squad  Win Probability\n",
+      "0    Real Madrid             0.04\n",
+      "1  Bayern Munich             0.01\n",
+      "2       Dortmund             0.00\n",
+      "3      Paris S-G             0.00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_24612\\3968649039.py:31: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  semifinals_teams['Win Probability'] = win_probabilities\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
+    "\n",
+    "# Cargar y preparar datos históricos\n",
+    "data_path = '../data/overall_limpio.csv'\n",
+    "overall_data = pd.read_csv(data_path)\n",
+    "features = ['W', 'D', 'L', 'GF', 'GA', 'GD', 'Pts']\n",
+    "\n",
+    "# Crear variable objetivo y seleccionar características\n",
+    "overall_data['Winner'] = (overall_data['Rk'] == 'W').astype(int)\n",
+    "X = overall_data[features]\n",
+    "y = overall_data['Winner']\n",
+    "\n",
+    "# Dividir en entrenamiento y prueba\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Entrenar el modelo de bosque aleatorio\n",
+    "model = RandomForestClassifier(random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Cargar datos de la temporada actual 2023-2024\n",
+    "new_season_data_path = '../data/equipo_2023-2024_limpio.csv'\n",
+    "season_2023_2024_data = pd.read_csv(new_season_data_path)\n",
+    "semifinals_teams = season_2023_2024_data[season_2023_2024_data['Rk'] == 'SF']\n",
+    "semifinals_features = semifinals_teams[features]\n",
+    "\n",
+    "# Predecir la probabilidad de ganar para cada equipo en semifinales\n",
+    "win_probabilities = model.predict_proba(semifinals_features)[:, 1]\n",
+    "semifinals_teams['Win Probability'] = win_probabilities\n",
+    "\n",
+    "# Ordenar los equipos por probabilidad de ganar\n",
+    "ranked_teams = semifinals_teams[['Squad', 'Win Probability']].sort_values(by='Win Probability', ascending=False).reset_index(drop=True)\n",
+    "\n",
+    "# Imprimir la tabla de ranking\n",
+    "print(ranked_teams)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Vamos a ver que características son más importantes y tienen mayor impacto en el modelo de Random Forest"
    ]
   },
@@ -1463,76 +1547,6 @@
    "metadata": {},
    "source": [
     "Esta visualización nos ayuda a entender qué factores considera el modelo más predictivos del éxito de un equipo en la Champions League. Los puntos y las victorias, que son indicadores directos del éxito en los partidos, naturalmente lideran en importancia, seguidos de medidas de rendimiento ofensivo y defensivo como los goles a favor y la diferencia de goles."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           Squad  Win Probability\n",
-      "0    Real Madrid             0.04\n",
-      "1  Bayern Munich             0.01\n",
-      "2       Dortmund             0.00\n",
-      "3      Paris S-G             0.00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_36308\\2121470241.py:31: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  semifinals_teams['Win Probability'] = win_probabilities\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
-    "\n",
-    "# Cargar y preparar datos históricos\n",
-    "data_path = '../data/overall_limpio.csv'\n",
-    "overall_data = pd.read_csv(data_path)\n",
-    "features = ['W', 'D', 'L', 'GF', 'GA', 'GD', 'Pts']\n",
-    "\n",
-    "# Crear variable objetivo y seleccionar características\n",
-    "overall_data['Winner'] = (overall_data['Rk'] == 'W').astype(int)\n",
-    "X = overall_data[features]\n",
-    "y = overall_data['Winner']\n",
-    "\n",
-    "# Dividir en entrenamiento y prueba\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Entrenar el modelo de bosque aleatorio\n",
-    "model = RandomForestClassifier(random_state=42)\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "# Cargar datos de la temporada actual 2023-2024\n",
-    "new_season_data_path = '../data/equipo_2023-2024_limpio.csv'\n",
-    "season_2023_2024_data = pd.read_csv(new_season_data_path)\n",
-    "semifinals_teams = season_2023_2024_data[season_2023_2024_data['Rk'] == 'SF']\n",
-    "semifinals_features = semifinals_teams[features]\n",
-    "\n",
-    "# Predecir la probabilidad de ganar para cada equipo en semifinales\n",
-    "win_probabilities = model.predict_proba(semifinals_features)[:, 1]\n",
-    "semifinals_teams['Win Probability'] = win_probabilities\n",
-    "\n",
-    "# Ordenar los equipos por probabilidad de ganar\n",
-    "ranked_teams = semifinals_teams[['Squad', 'Win Probability']].sort_values(by='Win Probability', ascending=False).reset_index(drop=True)\n",
-    "\n",
-    "# Imprimir la tabla de ranking\n",
-    "print(ranked_teams)\n",
-    "\n"
    ]
   }
  ],
